<resources>
    <string name="app_name">MemeHub</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="already_have_account">Already have account?</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="profile">profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>
    <string name="welcome">Welcome back!</string>
    <string name="set_profile_photo">Set profile photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="new_video">New video</string>
    <string name="tag">Tag</string>
    <string name="description">Description</string>
    <string name="password_is_too_small">Password is too small</string>
    <string name="choose_profile_photo">Choose profile photo</string>
    <string name="Gallery">Gallery</string>
    <string name="empty_field">Empty field</string>
    <string name="fill_all_fields_and_upload_a_video">Fill all fields and upload a video</string>
    <string name="select_video_source">Select Video Source</string>
</resources>